--- a/Intelligence/Intelligence.csproj
+++ b/Intelligence/Intelligence.csproj
@@ -62,6 +62,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="Admin\CreateMenu.cs" />
+    <Compile Include="Admin\QuestBody.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
